samples/_failures_safe/1760884677_a6cd58_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_878b378c.c: In function ‘main’:
./samples/SAFE/__tmp_878b378c.c:146:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  146 |     char input
      |     ^~~~
./samples/SAFE/__tmp_878b378c.c:146:5: error: expected declaration or statement at end of input
